<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fire TODOList</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-0661921010225573/7076125939</string>
    <string name="tasks">Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="action_save">Save</string>
    <string name="placeholder_title">Title</string>
    <string name="pending">Pending</string>
    <string name="done">Done</string>
    <string name="all">All</string>
    <string name="placeholder_date">Date</string>
    <string name="placeholder_description">Description</string>
    <string name="action_calendar">Date</string>
    <string name="action_time">Time</string>
    <string name="select_time">Date / Time</string>
    <string name="title_activity_view_task">View Task</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_show">Show details</string>
    <string name="select_the_list">Select the list</string>
    <string name="action_cancel">Cancel</string>
    <string name="field_empty">This field is required</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="description">A fast To-do list. Simple and useful tool for management of tasks and reminders.  You can create tasks with a title, date and description. The Fire TODOList is very fast and clean. Made to be easy to use.  The Fire TODOList have three lists: Pending, Done and All, separating the done tasks of the others. Perfect for management and organize your tasks and reminders.</string>
    <string name="phone_test_unique_id" translatable="false">e5564116db773c7b</string>
</resources>
